# SSAL_Clustering

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: glob_config.py  main.py  test_suite.py
src/data/: data_utils.py  dataset.py  dataset_type.py  utils.py
src/model/: checkpoint.py  config.py  feature_extractor.py  model_config.py  model_utils.py  resnet.py
src/pipeline/: cluster_purity.py  clustering.py  query_strategy.py  resnet18_baseline.py  ssalc_pipeline.py
src/visualize/: results_logger.py  visualize_model.py  visualize_results.py
