[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ssal-clustering"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "torch",
    "torchvision",
    "tqdm",
    "pandas",
    "scikit-learn",
    "umap-learn",
]

[project.optional-dependencies]
# GPU-accelerated UMAP via RAPIDS cuML.
# Only install on machines with a CUDA-capable GPU.
# Installation: pip install ".[gpu]"
gpu = [
    "cuml-cu12",
    "cupy-cuda12x",
]
